[package]
name = "sk6812_rpi"
version = "0.1.2"
authors = ["SteelPh0enix <steelphoenix2137@gmail.com>"]
edition = "2021"
description = "SK6812RGBW library for RaspberryPi"
readme = "README.md"
repository = "https://github.com/SteelPh0enix/sk6812rgbw-raspberry"
license = "MIT"
keywords = ["raspberrypi", "led", "rgbw", "strip", "library"]
categories = ["embedded"]
documentation = "https://docs.rs/sk6812_rpi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13"
palette = "0.6"
bitvec = "1"